husky pre-commit config is updated

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"vite": "^7.0.4"
 	},
 	"dependencies": {
-		"@inlang/paraglide-js": "^2.0.0"
+		"@inlang/paraglide-js": "^2.0.0",
+		"husky": "^9.1.7"
 	}
 }
