ts config is updated

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"strict": true,
 		"moduleResolution": "bundler"
 	},
-	"exclude": ["node_modules", "build", "dist", "public", ".svelte-kit", "src/lib"]
+	"exclude": ["node_modules", "build", "dist", "public", ".svelte-kit", "src/lib/"]
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
 	//
